fixed clipping styles

--- a/cvat-ui/src/components/models-page/styles.scss
+++ b/cvat-ui/src/components/models-page/styles.scss
@@ -112,6 +112,7 @@
     width: 25%;
     border-width: 4px;
     height: $grid-unit-size * 28;
+    overflow: hidden;
 
     .ant-card-meta-title {
         margin-bottom: 0 !important;
@@ -211,4 +212,13 @@
     &:hover {
         cursor: pointer !important;
     }
+}
+
+.cvat-models-item-text-description {
+    max-width: 80%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-height: $grid-unit-size * 3;
+    display: inline;
 }
